Remove disabled class in New Rendr for auto-login

--- a/rendr/template/manage.html
+++ b/rendr/template/manage.html
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <div id="preview-ctl">
-                <a href="#" class="button ctl menu radius btn-new-rendr disabled" ng-class="{'disabled': !library.key }" ng-click="showNewRendr()" ><i class="icon-file"></i>&nbsp; New</a>
+                <a href="#" class="button ctl menu radius btn-new-rendr" ng-class="{'disabled': !library.key }" ng-click="showNewRendr()" ><i class="icon-file"></i>&nbsp; New</a>
                 <a href="#" ng-class="{'disabled':!editorHasUnsavedChanges(), 'in-progress': inprogress }"
                    class="button ctl radius btn-save-rendr disabled" ng-click="saveRendr()"><i class="icon-save"></i>&nbsp; Save</a>
 
